<resources>
    <string name="app_name">Blog</string>
    <string name="title_home">Home</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
    <string name="title_blog">My Blogs</string>
    <string name="title_saved">Saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>