<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.blog.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_blogDetailFragment"
            app:destination="@id/blogDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_blog"
        android:name="com.example.blog.ui.blog.BlogFragment"
        android:label="@string/title_blog"
        tools:layout="@layout/fragment_blog">

        <action
            android:id="@+id/action_navigation_blog_to_blogDetailFragment"
            app:destination="@id/blogDetailFragment" />

        <action
            android:id="@+id/action_navigation_blog_to_editFragment"
            app:destination="@id/editFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.blog.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved">

        <action
            android:id="@+id/action_navigation_saved_to_blogDetailFragment"
            app:destination="@id/blogDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.blog.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.blog.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/blogDetailFragment"
        android:name="com.example.blog.ui.detail.BlogDetailFragment"
        android:label="Blog Detail"
        tools:layout="@layout/fragment_blog_detail" />

    <fragment
        android:id="@+id/editFragment"
        android:name="com.example.blog.ui.edit.EditFragment"
        android:label="Edit Blog"
        tools:layout="@layout/fragment_edit" />

</navigation>